Fixed singlepics text wrapping, trigger alignment and moved to new view element template system in the process.

--- a/products/photocrati_nextgen/modules/nextgen_basic_singlepic/static/nextgen_basic_singlepic.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_singlepic/static/nextgen_basic_singlepic.css
@@ -1,5 +1,16 @@
 /* ----------- Single picture -------------*/
 
+.ngg-gallery-singlepic-image {
+margin: 0 auto 1em auto;
+}
+.ngg-gallery-singlepic-image a {
+max-width: 100%;
+}
+.ngg-gallery-singlepic-image img {
+margin: 0;
+max-width: 100%;
+}
+
 .ngg-singlepic {
     background-color: #FFFFFF;
     display: block;
@@ -19,4 +30,8 @@
 .ngg-center {
     margin-left: auto !important;
     margin-right: auto !important;
+}
+
+.ngg-gallery-singlepic-image .ngg-trigger-buttons {
+margin: 5px 0 0 0;
 }
